[package]
name = "shack"
version = "0.1.0"
authors = ["Skander Jeddi <skander.jeddi2@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[build]
target = "x86_64-unknown-none.json"

[dependencies]
